--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="password"
@@ -86,28 +85,26 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="20dp"
                         android:orientation="vertical"
-                        android:visibility="gone">
+                        android:visibility="gone"
+                        tools:visibility="visible">
 
                         <com.google.android.material.checkbox.MaterialCheckBox
                             android:id="@+id/cb_alphabets"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:checked="true"
-                            app:buttonTint="@color/textColor"
                             android:text="@string/alphabets"/>
 
                         <com.google.android.material.checkbox.MaterialCheckBox
                             android:id="@+id/cb_digits"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:buttonTint="@color/textColor"
                             android:text="@string/digitz"/>
 
                         <com.google.android.material.checkbox.MaterialCheckBox
                             android:id="@+id/cb_special"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            app:buttonTint="@color/textColor"
                             android:text="@string/special_characters"/>
 
                         <LinearLayout
@@ -133,12 +130,13 @@
                                 android:autofillHints="true" />
                         </LinearLayout>
 
-                        <Button
+                        <com.google.android.material.button.MaterialButton
                             android:id="@+id/btn_set_password"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:backgroundTint="@color/colorAccent"
-                            android:text="@string/set_password"/>
+                            android:backgroundTint="@color/md_theme_tertiary"
+                            android:text="@string/set_password"
+                            android:textColor="@color/md_theme_onTertiary"/>
                     </LinearLayout>
 
                     <Button
@@ -148,8 +146,6 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginEnd="30dp"
                         android:layout_weight="1.5"
-                        android:backgroundTint="@color/buttonColor"
-                        style="?android:attr/buttonBarButtonStyle"
                         android:text="@string/gen_password" />
                 </LinearLayout>
             </LinearLayout>
@@ -161,28 +157,26 @@
                 android:orientation="horizontal"
                 android:weightSum="2">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_submit_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_margin="10dp"
-                    android:backgroundTint="@color/buttonColor"
-                    style="?android:attr/buttonBarButtonStyle"
                     android:text="@string/submit"
                     android:textSize="21sp" />
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_delete_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorCaution"
+                    android:backgroundTint="@color/md_theme_error"
                     android:layout_weight="1"
                     android:layout_margin="10dp"
-                    tools:visibility="gone"
-                    style="?android:attr/buttonBarButtonStyle"
+                    tools:visibility="visible"
                     android:text="@string/delete"
-                    android:textSize="21sp" />
+                    android:textSize="21sp"
+                    android:textColor="@color/md_theme_onError"/>
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
