--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -44,6 +44,7 @@
                     tools:text="Password"
                     android:textSize="14sp"
                     android:textStyle="italic"
+                    style="@style/Widget.Material3.Chip.Assist.Elevated"
                     app:chipCornerRadius="5dp"
                     app:mutableText="@{passwordItemViewModel.passwordText}"/>
             </LinearLayout>
@@ -55,25 +56,25 @@
                 android:orientation="vertical"
                 android:gravity="end">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.Material3.Button.IconButton.Filled"
                     android:id="@+id/btn_decrypt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:elevation="8dp"
-                    style="@style/Widget.Material3.Button.IconButton.Filled"
                     android:contentDescription="@string/decrypt"
-                    app:icon="@drawable/ic_action_encrypted_on" />
+                    app:icon="@drawable/ic_action_encrypted_on"
+                    app:cornerRadius="8dp"/>
 
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.Material3.Button.IconButton.Filled"
                     android:id="@+id/btn_copy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:elevation="8dp"
-                    style="@style/Widget.Material3.Button.IconButton.Filled"
                     android:contentDescription="@string/copy_to_clipboard"
-                    app:icon="@drawable/ic_action_copy"/>
+                    app:icon="@drawable/ic_action_copy"
+                    app:cornerRadius="8dp"/>
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
