--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#FFFFFF</color>
-    <color name="colorAccent">#FF9800</color>
     <color name="white">#FFFFFF</color>
     <color name="colorCaution">#9F0000</color>
     <color name="textColor">#262729</color>
     <color name="buttonColor">#161C2B</color>
+    <color name="colorAccent">#FF9800</color>
+
+    <color name="md_theme_primary">#244290</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#3F5AA9</color>
+    <color name="md_theme_onPrimaryContainer">#CDD7FF</color>
+    <color name="md_theme_secondary">#545D7E</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#D0D9FF</color>
+    <color name="md_theme_onSecondaryContainer">#555E7E</color>
+    <color name="md_theme_tertiary">#6B2D71</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#86458B</color>
+    <color name="md_theme_onTertiaryContainer">#FFC6FD</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#FAF8FF</color>
+    <color name="md_theme_onBackground">#1A1B21</color>
+    <color name="md_theme_surface">#FAF8FF</color>
+    <color name="md_theme_onSurface">#1A1B21</color>
+    <color name="md_theme_surfaceVariant">#E1E1EF</color>
+    <color name="md_theme_onSurfaceVariant">#444651</color>
+    <color name="md_theme_outline">#757682</color>
+    <color name="md_theme_outlineVariant">#C4C6D3</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2F3036</color>
+    <color name="md_theme_inverseOnSurface">#F1F0F7</color>
+    <color name="md_theme_inversePrimary">#B4C5FF</color>
+    <color name="md_theme_primaryFixed">#DBE1FF</color>
+    <color name="md_theme_onPrimaryFixed">#00174C</color>
+    <color name="md_theme_primaryFixedDim">#B4C5FF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#244290</color>
+    <color name="md_theme_secondaryFixed">#DBE1FF</color>
+    <color name="md_theme_onSecondaryFixed">#101A37</color>
+    <color name="md_theme_secondaryFixedDim">#BCC5EB</color>
+    <color name="md_theme_onSecondaryFixedVariant">#3C4665</color>
+    <color name="md_theme_tertiaryFixed">#FFD6FC</color>
+    <color name="md_theme_onTertiaryFixed">#36003E</color>
+    <color name="md_theme_tertiaryFixedDim">#F9ACFB</color>
+    <color name="md_theme_onTertiaryFixedVariant">#6C2D72</color>
+    <color name="md_theme_surfaceDim">#DAD9E0</color>
+    <color name="md_theme_surfaceBright">#FAF8FF</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F4F3FA</color>
+    <color name="md_theme_surfaceContainer">#EEEDF4</color>
+    <color name="md_theme_surfaceContainerHigh">#E9E7EF</color>
+    <color name="md_theme_surfaceContainerHighest">#E3E2E9</color>
+    <color name="md_theme_primary_mediumContrast">#0D307E</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#3F5AA9</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#2C3553</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#636C8D</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#581B60</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#86458B</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#740006</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FAF8FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#1A1B21</color>
+    <color name="md_theme_surface_mediumContrast">#FAF8FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#101116</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#E1E1EF</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#333640</color>
+    <color name="md_theme_outline_mediumContrast">#50525D</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#6A6C78</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2F3036</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F1F0F7</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#B4C5FF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#4F69B9</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#35509F</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#636C8D</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#4A5473</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#97549B</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#7B3B81</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C7C6CD</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FAF8FF</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F4F3FA</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#E9E7EF</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#DDDCE3</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D2D1D8</color>
+    <color name="md_theme_primary_highContrast">#002570</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#274492</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#222B48</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#3F4867</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#4D0E55</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#6E2F74</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#600004</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#98000A</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FAF8FF</color>
+    <color name="md_theme_onBackground_highContrast">#1A1B21</color>
+    <color name="md_theme_surface_highContrast">#FAF8FF</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#E1E1EF</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#292C36</color>
+    <color name="md_theme_outlineVariant_highContrast">#464954</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2F3036</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#B4C5FF</color>
+    <color name="md_theme_primaryFixed_highContrast">#274492</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#062C7B</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#3F4867</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#28314F</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#6E2F74</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#54165C</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#B9B8BF</color>
+    <color name="md_theme_surfaceBright_highContrast">#FAF8FF</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F1F0F7</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E3E2E9</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D5D3DB</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C7C6CD</color>
 </resources>
