--- a/app/src/main/res/drawable-anydpi/ic_action_qr_code.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_qr_code.xml
@@ -3,8 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FD9700"
-    android:alpha="0.8">
+    android:tint="?attr/colorControlNormal">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M3,11h8V3H3V11zM5,5h4v4H5V5z"/>
