--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,16 +6,16 @@
     app:startDestination="@id/fragment_passwords">
 
     <fragment
-        android:id="@+id/fragment_auth"
+        android:id="@+id/fragment_home"
         android:label="Authentication"
-        android:name="com.benatt.passwordsmanager.views.auth.AuthFragment"
-        tools:layout="@layout/fragment_auth">
+        android:name="com.benatt.passwordsmanager.views.home.HomeFragment"
+        tools:layout="@layout/fragment_home">
 
         <action
             android:id="@+id/action_authentication_to_password_list"
             app:destination="@+id/fragment_passwords"
             app:launchSingleTop="true"
-            app:popUpTo="@id/fragment_auth"
+            app:popUpTo="@id/fragment_home"
             app:popUpToInclusive="true" />
     </fragment>
 
@@ -46,4 +46,10 @@
             app:popUpTo="@id/nav_graph"
             app:popUpToInclusive="true"/>
     </fragment>
+
+    <fragment
+        android:id="@+id/fragment_about"
+        android:label="About"
+        android:name="com.benatt.passwordsmanager.views.about.AboutFragment"
+        tools:layout="@layout/fragment_about" />
 </navigation>
