--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -155,10 +155,10 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="5dp"
                     android:layout_weight=".14"
-                    android:backgroundTint="@color/md_theme_scrim"
+                    android:backgroundTint="@color/md_theme_secondary"
                     app:cornerRadius="8dp"
                     app:icon="@drawable/ic_action_delete"
-                    app:iconTint="@color/md_theme_onPrimary"
+                    app:iconTint="@color/md_theme_onSecondary"
                     tools:visibility="visible"
                     app:layout_constraintStart_toEndOf="@+id/btn_submit_password"
                     app:layout_constraintEnd_toEndOf="parent"/>
