--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -11,10 +11,21 @@
         android:padding="30dp">
 
         <TextView
+            android:id="@+id/app_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Crypt Code version 2.3.4"
+            android:textSize="24sp"
+            android:textStyle="italic"/>
+
+        <TextView
             android:id="@+id/app_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/app_name"
             tools:text="App Description"
             android:textSize="21sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
