--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -175,7 +175,7 @@
 
                     <Button
                         android:id="@+id/btn_learn_more"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/learn_more"
                         android:visibility="gone" />
